--- a/src/components/video/card/VideoCardTagList.less
+++ b/src/components/video/card/VideoCardTagList.less
@@ -9,7 +9,9 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  @media (min-width: @screen-md) {
-    justify-content: space-between;
+  @media (min-width: @screen-md-min) {
+    .attachment-tag {
+      margin-left: auto;
+    }
   }
 }
